test/must_fail/api/must_fail_exit_no_args.ngjs
#!/usr/bin/env ngspicejs
// exit without args
// linter: ngspicejs-lint
"use strict";

exit();
